Fixed some layout problem

--- a/app/static/quizInfo.css
+++ b/app/static/quizInfo.css
@@ -78,6 +78,7 @@
 }
 
 button{
+    line-height: 0px;
     margin-top: 70px;
     border: none;
     outline: none;
